--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
     "firebase": "^5.7.0",
+    "flatpickr": "^4.5.2",
     "moment": "^2.24.0",
+    "ng-pick-datetime": "^7.0.0",
+    "ng2-flatpickr": "^6.0.2",
     "ngx-material-timepicker": "^2.13.0",
     "ngx-pipes": "^2.3.6",
     "rxjs": "~6.2.0",
